--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="./node_modules/bootstrap/dist/css/bootstrap.css"/>
 </head>
 
-<body>
-
+<body ng-app="app">
+    <app></app>
 
 <script src="/angular-demo.js"></script>
 </body>
