--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
+    <div id="root"></div>
 
-
-<script src="/angular-demo.js"></script>
+<script src="/react-demo.js"></script>
 </body>
 </html>
